# FIT-projects

./: .gitignore  LICENSE  README.md
BIT_S4/: README.md
BIT_S4/ICP/: CMakeLists.txt  Doxyfile  Makefile  README.txt
BIT_S4/ICP/graphics/: key.pixil  readme.md  start.pixil
BIT_S4/ICP/maps/: map1.txt  map2.txt  map5.txt
BIT_S4/ICP/src/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  client.cpp  client.h  client_controller.cpp  client_controller.h  dateutils.cpp  dateutils.h  game.cpp  game.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  noncopyable.h  playwindow.cpp  playwindow.h  playwindow.ui  replay.cpp  replay.h  replay.ui  server.cpp  server.h  tiles.h
BIT_S4/ICP/src/client_objects/: floor.cpp  floor.hpp  ghost.cpp  ghost.hpp  key.cpp  key.hpp  pacman.cpp  pacman.hpp  start.cpp  start.hpp  target.cpp  target.hpp  wall.cpp  wall.hpp
BIT_S4/ICP/src/communication/: client_id.cpp  client_id.h  direction_message.cpp  direction_message.h  ending_message.cpp  ending_message.h  keys_message.cpp  keys_message.h  map_message.cpp  map_message.h  message.cpp  message.h  score_message.cpp  score_message.h
BIT_S4/ICP/src/server_objects/: ghost.cpp  ghost.h  key.cpp  key.h  object.cpp  object.h  player.cpp  player.h  start.cpp  start.h  target.cpp  target.h
BIT_S4/IPP/Project-1/: parse.php
BIT_S4/IPP/Project-2/: interpret.py
BIT_S4/IPP/Project-2/src/: instruction.py
BIT_S5/: README.md
BIT_S5/IIS/: Projekt IIS.html
BIT_S5/IIS/Controllers/: DeviceController.php  KpiController.php  ParameterController.php  SystemController.php  TypeController.php  UserController.php
BIT_S5/IIS/Models/: Device.php  DeviceParameter.php  Kpi.php  Parameter.php  System.php  SystemUser.php  Type.php  TypeParameter.php  User.php
BIT_S5/IIS/css/: create.css  devices.css  footer.css  header.css  my_systems.css  search_systems.css  system.css  user.css
BIT_S5/IIS/migrations/: 07_create_systems_table.php  08_create_devices_table.php  09_create_parameters_table.php  10_create_kpis_table.php  11_create_system_user.php  12_create_parameter_type.php  13_create_device_parameter.php
BIT_S5/IIS/routes/: web.php
BIT_S5/IIS/seeders/: DatabaseSeeder.php
BIT_S5/IIS/views/: footer.blade.php  header.blade.php  vytvorit-parametr.blade.php
BIT_S5/IIS/views/device/: editace_hodnot.blade.php  editace_zarizeni.blade.php  prochazet_zarizeni.blade.php  vytvorit_zarizeni.blade.php
BIT_S5/IIS/views/kpi/: editace_kpi.blade.php  vytvorit_kpi.blade.php
BIT_S5/IIS/views/system/: editace_systemu.blade.php  moje_systemy.blade.php  pridat_uzivatele.blade.php  prochazet_systemy.blade.php  system.blade.php  vytvorit_system.blade.php
BIT_S5/IIS/views/type/: vytvorit_typ.blade.php
BIT_S5/IIS/views/user/: prihlaseni.blade.php  registrace.blade.php  vypis_uzivatelu.blade.php
BIT_S5/IMP/: imp_project.c
BIT_S5/IMS/: Makefile  generator.cpp  generator.hpp  main.cpp  vlakyZ.cpp  vlakyZ.hpp
MIT_S1/: README.md
MIT_S1/AVS/: 3_4.txt  4_1.txt  4_2.txt  4_3.txt  PMC-xbenus01.txt  loop_mesh_builder.cpp  loop_mesh_builder.h  tree_mesh_builder.cpp  tree_mesh_builder.h
MIT_S1/MSP/Project-1/: proj1.ipynb
MIT_S1/SUI/Projekt-1/: xbenus01.py
MIT_S1/SUI/Projekt-2/: sui_torch.py
MIT_S1/SUI/Projekt-3/: sui-solution.cc
MIT_S2/: README.md
MIT_S2/FLP/Project-1/: Makefile  TEST_OUTPUT_2
MIT_S2/FLP/Project-1/src/: Cart.hs  Classification.hs  DecisionTree.hs  Helpers.hs  Main.hs  ParseArgs.hs  ParseTraining.hs  ParseTree.hs  TrainingData.hs
MIT_S2/FLP/Project-2/: Makefile  README.md  goalState.pl  input2.pl  main.pl  movement.pl  myIO.pl  search.pl
MIT_S2/FLP/Project-2/tests/: test02.txt  test03.txt  test04.txt  test05.txt  test06.txt  test07.txt  test08.txt
MIT_S2/FYO/: CMakeLists.txt  mingw-w64-toolchain.cmake  readme.txt
MIT_S2/FYO/src/: config.hpp  core.cpp  core.hpp  fiber.cpp  fiber.hpp  laser.cpp  laser.hpp  main.cpp  ray.cpp  ray.hpp  textui.cpp  textui.hpp
MIT_S2/KKO/: Makefile
MIT_S2/KKO/src/: arguments.cpp  arguments.hpp  compressor.cpp  compressor.hpp  debug.hpp  decompressor.cpp  decompressor.hpp  fileio.cpp  fileio.hpp  main.cpp  model.cpp  model.hpp  scanner.cpp  scanner.hpp
MIT_S2/PRL/Project-1/: oets.cpp
MIT_S2/PRL/Project-2/: test.sh  vuv.cpp
MIT_S2/TOI/Project-1/: sensor_main.c  server_main.c
MIT_S2/TOI/Project-2/:  toi2024_2025.ipynb
